[package]
name = "eigen-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", package = "halo2-base", branch = "develop" }

halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git", package = "halo2-ecc", branch = "develop", default-features = false }

getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
itertools = "0.10"
web-sys = { version = "0.3", features = ["Request", "Window", "Response", "console"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_bytes = "0.11"
bincode = "1.3"
tsify = "0.4.5"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1.45"
paste = "1.0.14"

[features]
default = ["rayon"]
rayon = []